--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,53 @@
 body {
+	background-image: url("../img/file.jpg");
+	background-repeat: no-repeat;
+	background-position: 80% 60%/*380px 155px*/;
+	background-size: 400px 400px;
+	font-family: 'Indie Flower', monospace;
+	font-size: 20px;
+}
+
+.wrap {
 	text-align: center;
-	margin: 50px 200px;
+	margin: 5% 20%;
+}
+
+.file {
+	display: none;
 }
 
 h1 {
 	border: 3px solid black;
 	margin: 5px auto;
 	text-align: left;
-	padding: 10px;
+	padding: 10px 20px;
+	background: white;
+	font-size: 50px;
 }
 
 .to-do-list {
 	border: 3px solid black;
 	height: 400px;
 	overflow: scroll;
+	background: white;
 }
 
 .input-box {
 	border: 3px solid black;
 	margin: 5px auto;
 	padding: 5px;
+	background: white;
+	height: 25px;
 }
 
 .trash {
-	width: 15px;
-	height: 15px;
+	width: 20px;
+	height: 20px;
 	float: right;
+	padding: 4px 0 0 0;
+}
+.trash:hover {
+	filter: invert(100%);
 }
 
 ul {
@@ -34,8 +56,13 @@ ul {
 }
 
 li {
-	padding: 5px 30px;
+	border: 3px solid black;
+	padding: 3px 40px;
 	text-align: left;
+	margin: 2px;
+}
+li:hover {
+	background-color: grey;
 }
 
 form {
@@ -43,9 +70,11 @@ form {
 }
 
 .input-to-do {
+	float: left;
 	border: 3px solid black;
 	padding: 3px;
-	width: 340px;
+	margin: 0 10px 0 0;
+	width: 70%;
 }
 
 .submit-button {
@@ -54,5 +83,14 @@ form {
 	background-color: black;
 	color: white;
 	font-size: 14px;
-	width: 60px;
+	width: 20%;
+}
+.submit-button:hover {
+	float: right;
+	padding: 2px;
+	background-color: white;
+	color: black;
+	font-size: 14px;
+	width: 20%;
+	border: 3px solid black;
 }
